// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionStatusLabel Component renders CONFIRMED properly and tooltip 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--confirmed"
  >
    June 1
  </div>
</div>
`;

exports[`TransactionStatusLabel Component renders PENDING properly and tooltip 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--pending transaction-status-label--pending"
  >
    Pending
  </div>
</div>
`;

exports[`TransactionStatusLabel Component renders QUEUED properly and tooltip 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--queued transaction-status-label--queued"
  >
    Queued
  </div>
</div>
`;

exports[`TransactionStatusLabel Component renders SIGNING properly and tooltip 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--signing"
  >
    Signing
  </div>
</div>
`;

exports[`TransactionStatusLabel Component renders UNAPPROVED properly and tooltip 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--unapproved transaction-status-label--unapproved"
  >
    Unapproved
  </div>
</div>
`;
